...
    <string name="general_next">Next</string>
    <string name="general_done">Done</string>
    <string name="general_send">Send</string>
    <string name="LoremIpsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
    <string name="general_error">Error</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_delete">Delete</string>
    <string name="general_warning_uppercase">WARNING</string>
    <string name="general_showlocation">Show my location to other users</string>

    /* ----- Database string ----- */

    <string name="database_could_not_find_you_in_db">Could not find you in the database !</string>
...

    <string name="chat_room_message_hint">Write your message here</string>
    <string name="chat_delete_alert_title">Are you sure?</string>
    <string name="chat_delete_alert_text">Do you want to delete this message?</string>
    <string name="chat_message_not_found">Chat message not found.</string>
    <string name="chat_relation_delete_alert_title">Delete conversation with </string>
    <string name="chat_relation_delete_alert_text">Do you want to delete this conversation?</string>
    <string name="chat_online_search_hint">Type a name to find a chat!</string>
    <string name="chat_deleted_chat">This chat has been deleted.</string>

    /* ----- Settings string ----- */

    <string name="settings_unavailable_location">Location unavailable</string>
...
